# IR2117

./: ecuación_cuadratica.cc  primorial.cc
ros2_ws/: .gitignore
ros2_ws/examples/: package.xml
ros2_ws/src/cpp_srvcli/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
ros2_ws/src/examples/: CMakeLists.txt  package.xml
ros2_ws/src/examples/src/: publisher.cpp  subscriber.cpp
ros2_ws/src/learning_tf2_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/learning_tf2_cpp/src/: tf2_listener.cpp  turtle_tf2_broadcaster.cpp
ros2_ws/src/minmax/: CMakeLists.txt  package.xml
ros2_ws/src/minmax/src/: Documento sin título 1  max.cpp  min.cpp  minmax.cpp
ros2_ws/src/olympic/: CMakeLists.txt  package.xml
ros2_ws/src/olympic/src/: circle.cpp  rings.cpp
ros2_ws/src/stats/: CMakeLists.txt  package.xml
ros2_ws/src/stats/src/: mean.cpp  median.cpp  mode.cpp
ros2_ws/src/sum/: CMakeLists.txt  package.xml
ros2_ws/src/sum/src/: sum.cpp
sum/: ecuación_cuadratica.cc  primorial.cc  sum-ab.cc  sum.cc
tb3_ws/src/intrusion/: CMakeLists.txt  package.xml
tb3_ws/src/intrusion/launch/: monitor.launch.py
tb3_ws/src/intrusion/src/: detector.cpp  monitor.cpp
tb3_ws/src/obstacles/: CMakeLists.txt  package.xml
tb3_ws/src/obstacles/launch/: avoidance.launch.py  detector_test.launch.py  triple_detector.launch.py
tb3_ws/src/obstacles/src/: avoidance.cpp  detector.cpp  subscriber.cpp
tb3_ws/src/persons/: CMakeLists.txt  package.xml
tb3_ws/src/robot_trajectory/: CMakeLists.txt  package.xml
(+11 files in other folders)
