<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>olympic</name>
  <version>0.0.0</version>
  <description>C++ client server tutorial</description>
  <maintainer email="al428707@uji.es">Sergio</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend> <!Primero instalar Cmake>

  <depend>rclcpp</depend> <!instalar dependencias>
  <depend>example_interfaces</depend>
  <depend>turtlesim</depend>
  <depend>rosidl_typesupport_cpp</depend>


  <test_depend>ament_lint_auto</test_depend> <!Paquetes para pruebas>
  <test_depend>ament_lint_common</test_depend>

  <export> <!Info adicional>
    <build_type>ament_cmake</build_type> <!Sist Compilacion>
  </export>
</package>
